Wed Oct  3 01:45:12 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Take as minimal version 2.64 iso 2.68.

Tue Oct  2 23:45:16 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Fresh copy of upstream-trunk with autotools patches
	(cfr. http://sourceforge.net/apps/trac/elftoolchain/ticket/321).

Tue Oct  2 23:30:17 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Replace this svn:externals copy with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2600
	* Makefile.in: Removed.

Wed Aug  8 02:55:01 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/Makefile (MKTOOLS): Add (to surpress building of the
	ELF tools).

Wed Aug  8 02:52:06 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/common/_elftc.h: Support RISC OS cross-compiler.
	* current-trunk/libelf/_libelf_config.h: Likewise.

Wed Aug  8 02:48:04 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/addr2line/Makefile (TOP): Use .CURDIR.
	* current-trunk/ar/Makefile: Likewise.
	* current-trunk/brandelf/Makefile: Likewise.
	* current-trunk/cxxfilt/Makefile: Likewise.
	* current-trunk/elfcopy/Makefile: Likewise.
	* current-trunk/elfdump/Makefile: Likewise.
	* current-trunk/findtextrel/Makefile: Likewise.
	* current-trunk/nm/Makefile: Likewise.
	* current-trunk/readelf/Makefile: Likewise.
	* current-trunk/size/Makefile: Likewise.
	* current-trunk/strings/Makefile: Likewise.

Wed Aug  8 02:37:28 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Add upstream-trunk r2539 copy.

Wed Aug  8 02:30:42 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* . (upstream-trunk): Add SF elftoolchain trunk VCS link.
	* ChangeLog, README, Makefile.in: Add.
